cheking at evening

--- a/home.html
+++ b/home.html
@@ -121,8 +121,8 @@
 
 
     <div class="container">
-        <div id="allPosts">
-            <div id="holder"></div>
+        <div id="allPosts" class="row">
+            <!-- <div id="holder"></div> -->
         </div>
 
     </div>
