--- a/home.html
+++ b/home.html
@@ -26,14 +26,14 @@
 <body>
     
     <!-- Nav Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
         <div class="container">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand font-weight-bold" href="#">Mana Panchayat</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
+            <div class="collapse navbar-collapse id="navbarSupportedContent">
+            <ul class="navbar-nav m-auto">
                 <li class="nav-item active">
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
@@ -57,13 +57,14 @@
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
             </form>
             </div>
         </div>
     </nav>
 
-    <div class="container mt-3">
+    <!-- Top Latest Cards -->
+    <!-- <div class="container mt-3">
         <div class="row">
             <div class="col-12 col-lg-8 ">
                 <div class="row">
@@ -117,11 +118,14 @@
             </div>
         </div>
 
-    </div>
+    </div> -->
 
 
-    <div class="container">
-        <div id="allPosts" class="row">
+    <div class="container mt-5">
+
+        <h4 class="font-weight-bold">Recent Posts</h4>
+
+        <div id="allPosts">
             <!-- <div id="holder"></div> -->
         </div>
 
