Butified Code & added next & previous buttons

--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     
     <!-- <meta name="color-scheme" content="dark light"> -->
 
-    <title>Mana Panchayat Home</title>
+    <title>Mana Panchayat | Home</title>
 
     <!-- Local CSS Link -->
     <link rel="stylesheet" href="./css/style.css">
