--- a/createNews.html
+++ b/createNews.html
@@ -7,7 +7,7 @@
         
         <!-- <meta name="color-scheme" content="dark light"> -->
 
-        <title>Mana Panchayat Create</title>
+        <title>Mana Panchayat | Create</title>
 
         <!-- Local CSS Link -->
         <link rel="stylesheet" href="./css/style.css">
