--- a/home.html
+++ b/home.html
@@ -126,7 +126,7 @@
         <h4 class="font-weight-bold">Recent Posts</h4>
 
         <div id="allPosts">
-            <!-- <div id="holder"></div> -->
+            <div id="holder"></div>
         </div>
 
     </div>
@@ -134,7 +134,7 @@
 
 
     <!-- Local Js Link -->
-    <script src="./js/main.js" type="text/javascript"></script>
+    <script src="./js/home.js" type="text/javascript"></script>
 
 
 </body>
