--- a/view_post.html
+++ b/view_post.html
@@ -103,14 +103,14 @@
                             <div class="modal-body share_body">
 
                                 <ul>
-                                    <li> <i class="fa-brands fa-instagram"></i> Instagram</li>
+                                    <!-- <li> <i class="fa-brands fa-instagram"></i> Instagram</li> -->
                                     <li> <i class="fa-brands fa-whatsapp"></i> WhatsApp</li>
-                                    <li> <i class="fa-brands fa-facebook-f"></i> Facebook</li>
+                                    <!-- <li> <i class="fa-brands fa-facebook-f"></i> Facebook</li>
                                     <li> <i class="fa-brands fa-twitter"></i> Twitter</li>
                                     <li> <i class="fa-brands fa-telegram"></i> Telegram</li>
                                     <li> <i class="fa-brands fa-pinterest"></i> Pinterest</li>
                                     <li> <i class="fa-brands fa-reddit-alien"></i> Reddit</li>
-                                    <li> <i class="fa-regular fa-envelope"></i> Mail</li>
+                                    <li> <i class="fa-regular fa-envelope"></i> Mail</li> -->
                                 </ul>
                                 
                             </div>
