--- a/view_post.html
+++ b/view_post.html
@@ -7,12 +7,28 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="googlebot" content="noindex">
 
         <!-- Share Title and Imge Meta data -->
-        <meta id="metaTitle" property="og:title" content="">
-        <meta id="metaImage" property="og:image" content="">
-        <meta id="metaDescription" property="og:description" content="">
+        <!-- <meta id="metaTitle" property="og:title" content="Test Tile">
+        <meta id="metaImage" property="og:image" content="https://tikkablob.blob.core.windows.net/mana-panchayat/avatar.png">
+        <meta id="metaDescription" property="og:description" content="Test description"> -->
 
+        <!-- <meta property="og:title" content="Kishore & Manasa getting hitched">
+        <meta property="og:description" content="We would like to invite you to our big day.">
+        <meta property="og:image" content="https://res.cloudinary.com/miryam/image/upload/v1653359216/Kishore%20weds%20Manasa/Link_Pic.png">
+        <meta property="og:image:width" content="250">
+        <meta property="og:image:height" content="250">
+        <meta property="og:image:type" content="image/png">
+        <meta property="og:type" content="website">         -->
+
+
+        <meta property="og:site_name" content="Mana ooru">
+        <meta property="og:title" content="Kishore & Manasa getting hitched" />
+        <meta property="og:description" content="Site-Description-Here asdf sfg sdfg adfg asd geeargdf gaer gdfgagag ite-Description-Here asdf sfg sdfg adfg asd geeargdf gaer gdfgagag ite-Description-Here asdf sfg sdfg adfg asd geeargdf gaer gdfgagag" />
+        <meta property="og:image" itemprop="image" content="https://res.cloudinary.com/miryam/image/upload/v1653359216/Kishore%20weds%20Manasa/Link_Pic.png">
+        <meta property="og:type" content="website" />
+        <!-- <meta property="og:updated_time" content="1440432930" /> -->
 
 
 
