--- a/home.html
+++ b/home.html
@@ -125,9 +125,7 @@
 
         <h4 class="font-weight-bold">Recent Posts</h4>
 
-        <div id="allPosts">
-            <div id="holder"></div>
-        </div>
+        <div id="allPosts"> </div>
 
     </div>
 
