--- a/view_post.html
+++ b/view_post.html
@@ -5,30 +5,30 @@
 
         <!-- Required meta tags -->
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="googlebot" content="noindex">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        
+        <!-- HTML Meta Tags -->
+        <title>పంచుకుందాం – తెలుగు కథ</title>
+        <meta name="description" content="ఒక రోజొక గురువు గారు తన ఇద్దరు శిష్యుల్నీ పిలిచి, “ఈ రోజు మీరిద్దరూ పొరుగూరికి వెళ్లి రావాలి” అని చెప్పారు.">
 
-        <!-- Share Title and Imge Meta data -->
-        <!-- <meta id="metaTitle" property="og:title" content="Test Tile">
-        <meta id="metaImage" property="og:image" content="https://tikkablob.blob.core.windows.net/mana-panchayat/avatar.png">
-        <meta id="metaDescription" property="og:description" content="Test description"> -->
+        <!-- Facebook Meta Tags -->
+        <meta property="og:url" content="http://mana-panchayat.great-site.net/view_post.html?id=142">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="పంచుకుందాం – తెలుగు కథ">
+        <meta property="og:description" content="ఒక రోజొక గురువు గారు తన ఇద్దరు శిష్యుల్నీ పిలిచి, “ఈ రోజు మీరిద్దరూ పొరుగూరికి వెళ్లి రావాలి” అని చెప్పారు.">
+        <meta property="og:image" content="https://thumbs.dreamstime.com/b/environment-earth-day-hands-trees-growing-seedlings-bokeh-green-background-female-hand-holding-tree-nature-field-gra-130247647.jpg">
 
-        <!-- <meta property="og:title" content="Kishore & Manasa getting hitched">
-        <meta property="og:description" content="We would like to invite you to our big day.">
-        <meta property="og:image" content="https://res.cloudinary.com/miryam/image/upload/v1653359216/Kishore%20weds%20Manasa/Link_Pic.png">
-        <meta property="og:image:width" content="250">
-        <meta property="og:image:height" content="250">
-        <meta property="og:image:type" content="image/png">
-        <meta property="og:type" content="website">         -->
+        <!-- Twitter Meta Tags -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta property="twitter:domain" content="mana-panchayat.great-site.net">
+        <meta property="twitter:url" content="http://mana-panchayat.great-site.net/view_post.html?id=142">
+        <meta name="twitter:title" content="పంచుకుందాం – తెలుగు కథ">
+        <meta name="twitter:description" content="ఒక రోజొక గురువు గారు తన ఇద్దరు శిష్యుల్నీ పిలిచి, “ఈ రోజు మీరిద్దరూ పొరుగూరికి వెళ్లి రావాలి” అని చెప్పారు.">
+        <meta name="twitter:image" content="https://thumbs.dreamstime.com/b/environment-earth-day-hands-trees-growing-seedlings-bokeh-green-background-female-hand-holding-tree-nature-field-gra-130247647.jpg">
 
-
-        <meta property="og:site_name" content="Mana ooru">
-        <meta property="og:title" content="Kishore & Manasa getting hitched" />
-        <meta property="og:description" content="Site-Description-Here asdf sfg sdfg adfg asd geeargdf gaer gdfgagag ite-Description-Here asdf sfg sdfg adfg asd geeargdf gaer gdfgagag ite-Description-Here asdf sfg sdfg adfg asd geeargdf gaer gdfgagag" />
-        <meta property="og:image" itemprop="image" content="https://res.cloudinary.com/miryam/image/upload/v1653359216/Kishore%20weds%20Manasa/Link_Pic.png">
-        <meta property="og:type" content="website" />
-        <!-- <meta property="og:updated_time" content="1440432930" /> -->
+        <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+        
 
 
 
@@ -189,7 +189,7 @@
                     </div> -->
 
                     <!-- Widget 3 (List Of Latest Posts) -->
-                    <div class="bg-light border">
+                    <div class="border">
                         <h5 class="font-weight-bold mb-3 p-3 text-white bg-primary text-center">Latest Posts</h5>
                         <div class="p-2 mt-3">
                             <div class="row px-3" id="latestPosts">
