--- a/create_newspost.html
+++ b/create_newspost.html
@@ -7,7 +7,7 @@
         
         <!-- <meta name="color-scheme" content="dark light"> -->
 
-        <title>Mana Panchayat | Create</title>
+        <title>మన పంచాయత్ | Create</title>
 
         <!-- Local CSS Link -->
         <link rel="stylesheet" href="./css/style.css">
