Little Changes on Meta Tags

--- a/view_post.html
+++ b/view_post.html
@@ -15,17 +15,17 @@
         <!-- Facebook Meta Tags -->
         <meta property="og:url" content="http://mana-panchayat.great-site.net/view_post.html?id=142">
         <meta property="og:type" content="website">
-        <meta property="og:title" content="పంచుకుందాం – తెలుగు కథ">
-        <meta property="og:description" content="ఒక రోజొక గురువు గారు తన ఇద్దరు శిష్యుల్నీ పిలిచి, “ఈ రోజు మీరిద్దరూ పొరుగూరికి వెళ్లి రావాలి” అని చెప్పారు.">
-        <meta property="og:image" content="https://thumbs.dreamstime.com/b/environment-earth-day-hands-trees-growing-seedlings-bokeh-green-background-female-hand-holding-tree-nature-field-gra-130247647.jpg">
+        <meta id="metaTitle" property="og:title" content="">
+        <meta id="metaDescription" property="og:description" content="Test description">
+        <meta id="metaImage" property="og:image" content="">
 
         <!-- Twitter Meta Tags -->
         <meta name="twitter:card" content="summary_large_image">
         <meta property="twitter:domain" content="mana-panchayat.great-site.net">
-        <meta property="twitter:url" content="http://mana-panchayat.great-site.net/view_post.html?id=142">
-        <meta name="twitter:title" content="పంచుకుందాం – తెలుగు కథ">
-        <meta name="twitter:description" content="ఒక రోజొక గురువు గారు తన ఇద్దరు శిష్యుల్నీ పిలిచి, “ఈ రోజు మీరిద్దరూ పొరుగూరికి వెళ్లి రావాలి” అని చెప్పారు.">
-        <meta name="twitter:image" content="https://thumbs.dreamstime.com/b/environment-earth-day-hands-trees-growing-seedlings-bokeh-green-background-female-hand-holding-tree-nature-field-gra-130247647.jpg">
+        <meta property="twitter:url" content="">
+        <meta id="metaTitle" name="twitter:title" content="">
+        <meta id="metaDescription" name="twitter:description" content="">
+        <meta id="metaImage" name="twitter:image" content="">
 
         <!-- Meta Tags Generated via https://www.opengraph.xyz -->
         
@@ -122,8 +122,12 @@
 
                                 <ul>
                                     <!-- <li> <i class="fa-brands fa-instagram"></i> Instagram</li> -->
-                                    <a target="_blank" href="https://api.whatsapp.com/send?text=file:///E:/_Jayakrishna/mana_panchayat/mana-panchayat/view_post.html?id=142">
-                                    <li> <i class="fa-brands fa-whatsapp"></i> WhatsApp</li></a>
+                                    <a id="whatsappUrl" target="_blank" href="https://api.whatsapp.com/send?text=file:///E:/_Jayakrishna/mana_panchayat/mana-panchayat/view_post.html?id=142">
+                                        <li> 
+                                            <i class="fa-brands fa-whatsapp"></i> 
+                                            WhatsApp
+                                        </li>
+                                    </a>
                                     <!-- <li> <i class="fa-brands fa-facebook-f"></i> Facebook</li>
                                     <li> <i class="fa-brands fa-twitter"></i> Twitter</li>
                                     <li> <i class="fa-brands fa-telegram"></i> Telegram</li>
