--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
 
     <!-- Local Js Link -->
-    <script src="./js/home.js" type="text/javascript"></script>
+    <script src="./js/index.js" type="text/javascript"></script>
 
 
 </body>
