--- a/view_post.html
+++ b/view_post.html
@@ -9,32 +9,17 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         
         <!-- HTML Meta Tags -->
-        <title>పంచుకుందాం – తెలుగు కథ</title>
-        <meta name="description" content="ఒక రోజొక గురువు గారు తన ఇద్దరు శిష్యుల్నీ పిలిచి, “ఈ రోజు మీరిద్దరూ పొరుగూరికి వెళ్లి రావాలి” అని చెప్పారు.">
+        <!-- <title>పంచుకుందాం – తెలుగు కథ</title> -->
 
         <!-- Facebook Meta Tags -->
-        <meta property="og:url" content="http://mana-panchayat.great-site.net/view_post.html?id=142">
         <meta property="og:type" content="website">
         <meta id="metaTitle" property="og:title" content="">
-        <meta id="metaDescription" property="og:description" content="Test description">
+        <meta id="metaDescription" property="og:description" content="">
+        <!-- <meta property="og:image" content="https://popupsmart.com/blog/user/pages/354.how-do-shopify-gift-cards-work/Shopify-gift-cards-cover.jpg"> -->
         <meta id="metaImage" property="og:image" content="">
+        <meta id="metaUrl" property="og:url" content="">
 
-        <!-- Twitter Meta Tags -->
-        <meta name="twitter:card" content="summary_large_image">
-        <meta property="twitter:domain" content="mana-panchayat.great-site.net">
-        <meta property="twitter:url" content="">
-        <meta id="metaTitle" name="twitter:title" content="">
-        <meta id="metaDescription" name="twitter:description" content="">
-        <meta id="metaImage" name="twitter:image" content="">
-
-        <!-- Meta Tags Generated via https://www.opengraph.xyz -->
         
-
-
-
-        <!-- <meta name="color-scheme" content="dark light"> -->
-
-        <title>Mana Panchayat | View Post</title>
 
         <!-- Local CSS Link -->
         <link rel="stylesheet" href="./css/style.css">
